# serializer version: 1
# name: test_all_entities[binary_sensor.nanostation_5ac_ap_name_dhcp_client-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.nanostation_5ac_ap_name_dhcp_client',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'DHCP client',
    'platform': 'airos',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dhcp_client',
    'unique_id': '03aa0d0b40fed0a47088293584ef5432_dhcp_client',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.nanostation_5ac_ap_name_dhcp_client-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'NanoStation 5AC ap name DHCP client',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nanostation_5ac_ap_name_dhcp_client',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[binary_sensor.nanostation_5ac_ap_name_dhcp_server-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.nanostation_5ac_ap_name_dhcp_server',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'DHCP server',
    'platform': 'airos',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dhcp_server',
    'unique_id': '03aa0d0b40fed0a47088293584ef5432_dhcp_server',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.nanostation_5ac_ap_name_dhcp_server-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'NanoStation 5AC ap name DHCP server',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nanostation_5ac_ap_name_dhcp_server',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[binary_sensor.nanostation_5ac_ap_name_dhcpv6_server-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.nanostation_5ac_ap_name_dhcpv6_server',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'DHCPv6 server',
    'platform': 'airos',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dhcp6_server',
    'unique_id': '03aa0d0b40fed0a47088293584ef5432_dhcp6_server',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.nanostation_5ac_ap_name_dhcpv6_server-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'NanoStation 5AC ap name DHCPv6 server',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nanostation_5ac_ap_name_dhcpv6_server',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[binary_sensor.nanostation_5ac_ap_name_port_forwarding_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.nanostation_5ac_ap_name_port_forwarding_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'Port forwarding active',
    'platform': 'airos',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'port_forwarding',
    'unique_id': '03aa0d0b40fed0a47088293584ef5432_portfw',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.nanostation_5ac_ap_name_port_forwarding_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'NanoStation 5AC ap name Port forwarding active',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nanostation_5ac_ap_name_port_forwarding_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[binary_sensor.nanostation_5ac_ap_name_pppoe-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.nanostation_5ac_ap_name_pppoe',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'PPPoE',
    'platform': 'airos',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pppoe',
    'unique_id': '03aa0d0b40fed0a47088293584ef5432_pppoe',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.nanostation_5ac_ap_name_pppoe-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'NanoStation 5AC ap name PPPoE',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.nanostation_5ac_ap_name_pppoe',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
